--- a/public/quality-control.html
+++ b/public/quality-control.html
@@ -87,46 +87,123 @@
         <section id="mission-vision-area">
         	<div class="container">
             	<div class="row">
-                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                    <div>
                     	<div class="mission-vision-text">
                         	<div class="section-title">
                         		<h2><span>QUALITY CONTROL</span></h2>
                     		</div>
-                            <p>
-                                Quality Control is the key to build our successful business. We are strived to manufacture products that meet or exceed customers’ expectations. Our Production Process Control System allow us to minimize waste and operate at high levels of productivity.
-                            </p>
-                            <table class="flow-table" border="1">
-                                <tr>
-                                    <th>Process Control Description</th>
-                                    <th>Form Templates</th>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-8">
-                                        <ol type="a">
-                                            <li>Salesman will generate <span class="text-highlight">Production Order</span> according to <span class="text-highlight">Sales Contract</span>, production planner will generate <span class="text-highlight">Production</li>
-                                            <li>Plan & Follow Up Plan</li> according to <span class="text-highlight">Production Order</span>.</li>
-                                            <li>Technical Department will generate <span class="text-highlight">Technical Flow Sheet</span> and <span class="text-highlight">Bill of Material</span> (BOM) according to <span class="text-highlight">Production Order</span>,</li>
-                                            <li>those documents will be sent to Production Department, Purchasing Department, and Finance Department accordingly.</li>
-                                            <li>Technical Department will send <span class="text-highlight">Color Sample</span> and <span class="text-highlight">Quality Requirement</span> to Production Department and QC Department.</li>
-                                            <li>Production Department will generate a full-time production scheduling in responsible for order's follow up and coordination.</li>
-                                        </ol>
-                                    </td>
-                                    <td class="col-md-4">
-                                        <ul>
-                                            <li>Production Order</li>
-                                            <li>Technical Flow Sheet</li>
-                                            <li>Bill of Material</li>
-                                            <li>Quality Requirement</li>
-                                            <li>Sales Contract</li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <div class="mission-vision-right-img">
-                            <img src="img/aboutus/quality.png" alt="">
+                            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                                <p>
+                                    Quality Control is the key to build our successful business. We are strived to manufacture products that meet or exceed customers’ expectations. Our Production Process Control System allow us to minimize waste and operate at high levels of productivity.
+                                </p>
+                                <table class="flow-table" border="1">
+                                    <tr>
+                                        <th>Process Control Description</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Salesman will generate <span class="text-highlight">Production Order</span> according to <span class="text-highlight">Sales Contract</span>, production planner will generate <span class="text-highlight">Production Plan & Follow Up Plan according to <span class="text-highlight">Production Order</span>.</li>
+                                                <li>Technical Department will generate <span class="text-highlight">Technical Flow Sheet</span> and <span class="text-highlight">Bill of Material</span> (BOM) according to <span class="text-highlight">Production Order</span>, those documents will be sent to Production Department, Purchasing Department, and Finance Department accordingly.</li>
+                                                <li>Technical Department will send <span class="text-highlight">Color Sample</span> and <span class="text-highlight">Quality Requirement</span> to Production Department and QC Department.</li>
+                                                <li>Production Department will generate a full-time production scheduling in responsible for order's follow up and coordination.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Purchasing Department will generate <span class="text-highlight">Material Purchase Orders</span>based on BOM and Raw Material Inventory Counts.</li>
+                                                <li>Purchasing Department will choose supplier from <span class="text-highlight">Qualified Supplier List</span> and generate <span class="text-highlight">Monthly Raw Material Purchasing Plan</span>. In a urgent situation, <span class="text-highlight">Urgent Material Purchase Order</span> will be generated as for an extra precaution.</li>
+                                                <li>Purchasing Department sign <span class="text-highlight">Purchase Contract</span> with supplier, and C.C. to Production Department and QC Department.</li>
+                                                <li>Before receiveing material, QC Department will conduct IQC to inspect the quality of incoming material. If needed, QC Dep. will send the material to thrid party to further verify the quality of the product.</li>
+                                                <li>If the product passed inspection, raw material are ready to store. Warehouse will generate <span class="text-highlight">Raw Material Inventory Statement</span> and <span class="text-highlight">Production Plan & Follow up List</span>. If the product failed inspection, QC Department will cancel the orders.</li>
+                                                <li>The raw material must be stored in the assigned location and marked clearly according to <span class="text-highlight">Inventory Management Standard</span>. Warehouse will obey the rule of  "First-In First-Out (FIFO)" and no use of product after the period of validity.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Material Engineer from our Technical Department will pick material from the warhouse base on <span class="text-highlight">Recipe Sheet</span>.</li>
+                                                <li>Material Engineer will compound the material according to <span class="text-highlight">Recipe Sheet</span>.</li>
+                                                <li>Material Engineer will inform inspectors to perform IPQC by following "First Inspection Procedure". If having a Not ok result, Engineers will make adjustments on the recipe, and repeat QC2 process until products fully pass the inspection.</li>
+                                                <li>After passing "First Inspection Procedure", our Engineers will update <span class="text-highlight">Recipe Sheet</span> and make a record.</li>
+                                                <li>Passed IPQC, ready to go into production.</li>
+                                                <li>Inspectors will conduct random inspection every 30 min (according to <span class="text-highlight">Production Program</span>) to make sure no defective products have been produced.</li>
+                                                <li>After Mixing Process, Material Engineers will clean and run the maintenance procedure for the machine. Also, in responsible of fillout <span class="text-highlight">Equipments Maintenance Record Form</span> and <span class="text-highlight">Production Plan & Tracking Sheet</span>.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Extruding Technician from Production Department will set up parameters for the Extruding Machine.</li>
+                                                <li>Extruding Technician will let inspectors to perform IPQC by following "First Inspection Procedure". If having a Not ok result, Technician will make adjustments on parameters for the machine, repeat QC3 process until products fully pass the inspection.</li>
+                                                <li>After passing "First Inspection Procedure", our Extruding Technician will update the <span class="text-highlight">Extruding Parameter's Record</span>.</li>
+                                                <li>Passed IPQC, ready to go into production.</li>
+                                                <li>Inspectors will conduct random inspection every 30 min (according to <span class="text-highlight">Production Program</span>) to make sure no defective products have been produced.</li>
+                                                <li>After Extruding Process, Extruding Technician should run the maintenance procedure for the machine. Also, in responsible of fillout <span class="text-highlight">Equipments Maintenance Record Form</span> and <span class="text-highlight">Production Plan & Tracking Sheet</span>.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Grinding Technician from Production Department wiill set up Grinding Machine's parameters.</li>
+                                                <li>Grinding Technician will let inspectors to perform IPQC by following "First Inspection Procedure". If having a Not ok result, Technician will make some adjustments on machine parameters, repeat QC4 process until products fully pass the inspection.</li>
+                                                <li>After passing "First Inspection Procedure", our Grinding Technician will update the <span class="text-highlight">Grinding Parameter's Record</span>.</li>
+                                                <li>Passed IPQC, ready to go into production.</li>
+                                                <li>Inspectors will conduct random inspection every 30 min (according to <span class="text-highlight">Production Program</span>) to make sure no defective products have been produced.</li>
+                                                <li>After Grinding Process, Grinding Technician should run the maintenance procedure for the machine. Also, in responsible of fillout <span class="text-highlight">Equipments Maintenance Record Form</span> and <span class="text-highlight">Production Plan & Tracking Sheet</span>.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Bonding Technician from Production Department will set up Bonding Machine's parameters.</li>
+                                                <li>Bonding Technician will let inspectors to perform IPQC by following "First Inspection Procedure". If having a Not ok result, Technician will make some adjustments on machine parameters, repeat QC5 process until products fully pass the inspection.</li>
+                                                <li>After passing "First Inspection Procedure", our Bonding Technician will update the <span class="text-highlight">Bonding Parameter's Record</span>.</li>
+                                                <li>Passed IPQC, ready to go into production.</li>
+                                                <li>Inspectors will conduct random inspection from every batch produced (according to <span class="text-highlight">Production Program</span>) to make sure no defective products have been produced.</li>
+                                                <li>After Bonding Process, Bonding Technician should run the maintenance procedure for the machine. Also, in responsible of fillout <span class="text-highlight">Equipments Maintenance Record Form</span> and <span class="text-highlight">Production Plan & Tracking Sheet</span>.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>After completing production, inspectors will conduct FQC base on <span class="text-highlight">Production Program</span>. If having a Not ok result, inspectors will generate <span class="text-highlight">Failure Analysis Data Sheet</span> and proceed <span class="text-highlight">Failure Control Management Program</span>.</li>
+                                                <li>If passed FQC, products are ready to entering warehouse.</li>
+                                                <li>Finishing Products must be stored in the assigned location and marked clearly according to <span class="text-highlight">Inventory Management Standard</span>. Warehouse will obey the rule of  "First-In First-Out (FIFO)" and no use of product after the period of validity.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Before delivery, inspectors will again conduct RQC (random inspection) 3～5 days ahead of the delivery date, if OK, products are ready to delivery. If Not ok, Production Department will excute <span class="text-highlight">Failure Control Management Program</span> and "Rework" through .arrange the "Rework" and apply to inspection again untill FQC OK. The whole process until the final products are fully passed all the tests and met all the requirements.</li>
+                                                <li>After conduct RQC, Engineers and Technicians will update <span class="text-highlight">Production Program</span>.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-12">
+                                            <ol type="a">
+                                                <li>Final products upon delivery will be counted and neatly pile up by warehouse workers.</li>
+                                                <li>Delivery destination, products quantity, packaging and shipping marks are carefully examined according to <span class="text-highlight">Production Order</span>.</li>
+                                                <li>Engineers and Technicians will update <span class="text-highlight">Production Plan & Tracking Sheet</span> to finish the whole process.</li>
+                                            </ol>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                                <div class="mission-vision-right-img">
+                                    <img src="img/aboutus/quality.png" alt="">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
